2010-08-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.34 released.

        * Added test for Term::ReadKey and if found use termheight
          to define whitespace header for screens

        * Fixed bug https://rt.cpan.org/Ticket/Display.html?id=18382
          where the screen was not properly clearign for Windows

        $ Fixed bug with "Default" setting

        * Changes to repair interactions with FullAuto architecture


2010-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.33 released.

        * Changes to repair interactions with FullAuto architecture


2008-02-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.32 released.

        * Added Macro enhancement ]Previous[{Menu_Label} to POD
          documentation.

        * Repaired and updated code so that Macros work as advertised

        * Repaired subroutine use with Convey => '&sub()', and
          Result => '&sub()', elements in Item_<#> hashes in the Menu
          configuration hash.

        * Repaired full Macro use in Banners

        * Repaired a number of navigation bugs

2008-01-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.31 released.

        * Repair Distribution (bad META.yml).

2008-01-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.30 released.

        * Repaired bugs impairing the use of subroutines with
          the ]Convey[ macro in nested menus.

2007-09-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.29 released.

        * Repaired bugs when "Result =>" setting value is
          the name of a perl subroutine.

2007-09-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.28 released.

        * More changes to 'require menu_cfg' to reflect FullAuto architecture

2007-09-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.27 released.
